--- a/mendix-app-secrets.yaml
+++ b/mendix-app-secrets.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mendix-app-secrets
 type: Opaque
 data:
-  admin-password: <ADMIN_PASSWORD?
+  admin-password: <ADMIN_PASSWORD>
   db-endpoint: <DATABASE_ENDPOINT>
   license-key: <LICENSE_KEY>
   license-id: <LICENSE_ID>
